feat: add hateoas config to order controller